<resources>
    <string name="app_name">COVID-19 Info</string>
    <string name="main_info">Select a country below:</string>
    <string name="main_spinner_country">Country</string>
    <string name="main_heading_cases">Cases</string>
    <string name="main_heading_deaths">Deaths</string>
    <string name="main_label_total">Total</string>
    <string name="main_label_new">New</string>
    <string name="main_label_active">Active</string>
    <string name="main_label_critical">Critical</string>
    <string name="main_label_recovered">Recovered</string>
    <string name="main_button_detailed">Detailed view</string>
    <string name="main_info_failure">Error!</string>
    <string name="title_activity_detailed">Detailed</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
