<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCasesActive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_active"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCasesCritical"
        app:layout_constraintEnd_toStartOf="@+id/tvActiveCases"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCasesNew" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_info"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_spinner_country"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/spCountry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCountry"
        app:layout_constraintTop_toTopOf="@+id/tvLabelCountry" />

    <TextView
        android:id="@+id/tvHeadingCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/main_heading_cases"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCountry" />

    <TextView
        android:id="@+id/tvHeadingDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/main_heading_deaths"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCasesRecovered" />

    <TextView
        android:id="@+id/tvDeathsTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDeathsNew"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalDeaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadingDeaths" />

    <TextView
        android:id="@+id/tvDeathsNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_new"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tvNewDeaths"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeathsTotal" />

    <TextView
        android:id="@+id/tvLabelCaseTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelCasesNew"
        app:layout_constraintEnd_toStartOf="@+id/tvTotalCases"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeadingCases" />

    <TextView
        android:id="@+id/tvLabelCasesNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_new"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCasesActive"
        app:layout_constraintEnd_toStartOf="@+id/tvNewCases"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCaseTotal" />

    <TextView
        android:id="@+id/tvCasesCritical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_critical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCasesRecovered"
        app:layout_constraintEnd_toStartOf="@+id/tvCriticalCases"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCasesActive" />

    <TextView
        android:id="@+id/tvCasesRecovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_label_recovered"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tvRecoveredCases"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCasesCritical" />

    <TextView
        android:id="@+id/tvTotalCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCaseTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCaseTotal"
        app:layout_constraintTop_toTopOf="@+id/tvLabelCaseTotal" />

    <TextView
        android:id="@+id/tvNewCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCasesNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCasesNew"
        app:layout_constraintTop_toTopOf="@+id/tvLabelCasesNew" />

    <TextView
        android:id="@+id/tvActiveCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCasesActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCasesActive"
        app:layout_constraintTop_toTopOf="@+id/tvCasesActive" />

    <TextView
        android:id="@+id/tvCriticalCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCasesCritical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCasesCritical"
        app:layout_constraintTop_toTopOf="@+id/tvCasesCritical" />

    <TextView
        android:id="@+id/tvRecoveredCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCasesRecovered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCasesRecovered"
        app:layout_constraintTop_toTopOf="@+id/tvCasesRecovered" />

    <TextView
        android:id="@+id/tvTotalDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDeathsTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDeathsTotal"
        app:layout_constraintTop_toTopOf="@+id/tvDeathsTotal" />

    <TextView
        android:id="@+id/tvNewDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/main_info_failure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDeathsNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDeathsNew"
        app:layout_constraintTop_toTopOf="@+id/tvDeathsNew" />

    <Button
        android:id="@+id/btnDetailedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/main_button_detailed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeathsNew" />


</androidx.constraintlayout.widget.ConstraintLayout>